# release-impact-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  daily-activity.yml  release-impact.yml
activity/: DAILY_LOG.md
docs/: architecture.md
examples/: release-notes-2026R2-sample.csv
release_impact/: __init__.py  cli.py  mcp_server.py
release_impact/analysis/: classifier.py  matcher.py
release_impact/inventory/: eib_scanner.py  models.py  studio_scanner.py
release_impact/notify/: slack.py
release_impact/release_notes/: loader.py  models.py
release_impact/report/: html_report.py  markdown_report.py
tests/: test_matcher.py  test_studio_scanner.py
tests/fixtures/studio_workspace/INT001_Worker_Sync/: assembly.xml
tests/fixtures/studio_workspace/INT002_Comp_Report/: assembly.xml
tests/fixtures/studio_workspace/eib_exports/: EIB_New_Hire_Load.xml
